# EasyExamples

Gdiplus_H/: CMakeLists.txt
Gdiplus_H/src/: main.cpp
VsCodeCmakeEasiest/: CMakeLists.txt
VsCodeCmakeW2src/: CMakeLists.txt
VsCodeCmakeW2src/src/: helper.cpp  helper.h  main.cpp
WindowsHEasiest/: CMakeLists.txt
WindowsHEasiest/src/: main.cpp
